--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
-version: '3.8'
 services:
   mysql:
-    image: mysql:8.0
+    image: mysql:9.2
     ports:
       - "3306:3306"
     environment:
@@ -10,22 +9,13 @@ services:
       - MYSQL_USER=petclinic
       - MYSQL_PASSWORD=petclinic
       - MYSQL_DATABASE=petclinic
-    # Simplified volume configuration
     volumes:
-      - mysql_data:/var/lib/mysql
-      - ./conf.d:/etc/mysql/conf.d:ro
-
+      - "./conf.d:/etc/mysql/conf.d:ro"
   postgres:
-    image: postgres:16
+    image: postgres:18.0
     ports:
       - "5432:5432"
     environment:
       - POSTGRES_PASSWORD=petclinic
       - POSTGRES_USER=petclinic
       - POSTGRES_DB=petclinic
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-volumes:
-  mysql_data:
-  postgres_data:
